# code-assessment

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
.claude/: launch.json
docs/: ARCHITECTURE.md  DATASET.md  DELIVERY.md  DESIGN.md  (+4 more)
src/cli/: .gitignore  Dockerfile  README.md  pyproject.toml
src/cli/biggy/: __init__.py  __main__.py  cli.py
src/cli/biggy/cli/: __init__.py  app.py  render.py
src/cli/biggy/cli/commands/: eval.py  investigate.py  version.py  workspace.py
src/cli/biggy/commands/: __init__.py  investigate.py
src/cli/biggy/engine/: __init__.py  comms.py  config.py  context.py  frame.py  grounding.py  ledger.py  orchestrator.py  scenario.py  schemas.py  trace.py
src/cli/biggy/engine/evidence/: __init__.py  timeutil.py  tools.py  vault.py
src/cli/biggy/engine/llm/: __init__.py  client.py
src/cli/biggy/engine/phases/: __init__.py  adjudicate.py  base.py  hypothesize.py  investigate.py  reconcile.py  verify.py
src/cli/biggy/engine/prompts/: adjudicate.md  hypothesize.md  investigate.md  system.md
src/cli/biggy/engine/workspace/: __init__.py  manifest.py
src/cli/biggy/eval/: __init__.py  grade.py  harness.py
src/cli/biggy/worker/: __init__.py  __main__.py  contracts.py  db.py  fake.py  redis_io.py  runner.py  sink.py
src/cli/tests/: _fakes.py  conftest.py  test_cli.py  test_comms.py  test_contract_parity.py  test_frame.py  test_grade.py  test_llm_resilience.py  test_manifest_fresh.py  test_orchestrator.py  test_tools.py  test_trace_seam.py  test_vault.py  test_verify.py  test_worker_db.py  test_worker_runner.py
(+142 files in other folders)
